--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -194,6 +194,7 @@ en:
   between: "between"
   remove: "remove"
   sortBy: "Sort by"
+  search: "Search"
   searchIn: "Search in"
   searchOptions: "Search options"
   searchedIn: "<b>%{item}</b> was searched <b>%{count}</b> times"
