message show date

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -791,6 +791,8 @@ en:
 
   formtastic: 
     labels:
+      message:
+        body: "Message"
       meetup:
         title: "Title"
         description: "Description" 
