--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,42 +1,47 @@
+---
 en:
   errors:
     messages:
-      not_found: "not found"
-      already_confirmed: "was already confirmed"
-      not_locked: "was not locked"
-
+      not_found: not found
+      already_confirmed: was already confirmed
+      not_locked: was not locked
   devise:
     failure:
-      unauthenticated: 'You need to sign in or sign up before continuing.'
-      unconfirmed: 'You have to confirm your account before continuing.'
-      locked: 'Your account is locked.'
-      invalid: 'Invalid email or password.'
-      invalid_token: 'Invalid authentication token.'
-      timeout: 'Your session expired, please sign in again to continue.'
-      inactive: 'Your account was not activated yet.'
+      unauthenticated: You need to sign in or sign up before continuing.
+      unconfirmed: You have to confirm your account before continuing.
+      locked: Your account is locked.
+      invalid: Invalid email or password.
+      invalid_token: Invalid authentication token.
+      timeout: Your session expired, please sign in again to continue.
+      inactive: Your account was not activated yet.
     sessions:
-      signed_in: 'Signed in successfully.'
-      signed_out: 'Signed out successfully.'
+      signed_in: Signed in successfully.
+      signed_out: Signed out successfully.
     passwords:
-      send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
-      updated: 'Your password was changed successfully. You are now signed in.'
+      send_instructions: You will receive an email with instructions about how to
+        reset your password in a few minutes.
+      updated: Your password was changed successfully. You are now signed in.
     confirmations:
-      verifyAccount: 'Please verify your account.'
-      resend: 'We have sent an email to you for this, if you didn\''t receive it you can resend it here&#58; '
-      notYetConfirmed: 'We have sent an email to you how to fully activate your account.'
-      send_instructions: 'You will receive an email with instructions about how to confirm your account in a few minutes.'
-      confirmed: 'Your account was successfully confirmed. You are now signed in.'
+      verifyAccount: Please verify your account.
+      resend: ! 'We have sent an email to you for this, if you didn\''t receive it
+        you can resend it here&#58; '
+      notYetConfirmed: We have sent an email to you how to fully activate your account.
+      send_instructions: You will receive an email with instructions about how to
+        confirm your account in a few minutes.
+      confirmed: Your account was successfully confirmed. You are now signed in.
     registrations:
-      signed_up: 'You have signed up successfully.'
-      updated: 'You updated your account successfully.'
-      destroyed: 'Bye! Your account was successfully cancelled. We hope to see you again soon.'
+      signed_up: You have signed up successfully.
+      updated: You updated your account successfully.
+      destroyed: Bye! Your account was successfully cancelled. We hope to see you
+        again soon.
     unlocks:
-      send_instructions: 'You will receive an email with instructions about how to unlock your account in a few minutes.'
-      unlocked: 'Your account was successfully unlocked. You are now signed in.'
+      send_instructions: You will receive an email with instructions about how to
+        unlock your account in a few minutes.
+      unlocked: Your account was successfully unlocked. You are now signed in.
     mailer:
-      confirmation_instructions: 
-        subject: 'Confirmation instructions'
-      reset_password_instructions: 
-        subject: 'Reset password instructions'
-      unlock_instructions: 
-        subject: 'Unlock Instructions'
+      confirmation_instructions:
+        subject: Confirmation instructions
+      reset_password_instructions:
+        subject: Reset password instructions
+      unlock_instructions:
+        subject: Unlock Instructions
