group translation show

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -659,6 +659,7 @@ de:
     editMeetup: Treffpunkt &auml;ndern
     newMeetup: Neuer Treffpunkt
     resources:
+      of: Ressourcen von
       iNeed: Ich brauche
       iHave: Ich habe
       iHaveTaken: Ich habe genommen
