--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -559,6 +559,7 @@ en:
       editUserdetails: Edit Personal Data
       followings: follows
       followers: is followed by
+      invite: Invite friends
   userarea:
     edit:
       avatar: Edit Avatar
