--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -277,6 +277,7 @@ de:
   usersPingIsClosed: schliesst Ping auf '%{title}'
   hasCommentedOn: hat '%{title}' kommentiert
   hasDeleted: hat gel&ouml;scht
+  pleaseChoose: Bitte w&auml;hlen
   activity: Aktivit&auml;ten
   link:
     ping:
@@ -628,12 +629,15 @@ de:
   friendships:
     pending: Offene Freundschaftsanfragen
     friend: Freunde
-    accepted: Akpetiert
+    accepted: Akzeptiert
   comments:
     comments: Kommentare
     leaveAComment: ! 'Schreibe einen Kommentar:'
     hasCommentedYou: ! ' hat dich kommentiert.'
     hasCommentedYour: ! ' hat etwas von dir kommentiert: '
+  invitations:
+    inviteYourFriends: Lade deine Freunde, Familie oder Kollegen ein.
+    chooseProvider: ! 'Bitte w&auml;hle einen Email-Provider. Du kannst auch einfach Email-Addressen angeben.'	  
   title:
     startpage:
       weAre: Wir sind
@@ -769,6 +773,13 @@ de:
       message:
         subject: Betreff
         body: Nachricht
+      invitation: 
+        email: Emailaddresse
+        password: Passwort
+        importContacts: Kontakte importieren
+        emails: Email-Adressen
+        invitationmessage: Einladungstext
+        sendInvitation: Einladung verschicken
       meetup:
         title: Titel
         description: Beschreibung
