transiflex added to footer

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -647,6 +647,7 @@ en:
       imprint: Imprint
       tos: Terms of service
       privacypolicy: Privacy policy
+      helptotranslate: Help to translate
       facebook: iwyg on facebook
       github: iwyg on github
     mailbox: Mailbox
