--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -652,6 +652,7 @@ de:
       imprint: Impressum
       tos: AGB
       privacypolicy: Datenschutzerklärung
+      helptotranslate: Übersetzen mithelfen
       facebook: iwyg auf facebook
       github: iwyg auf github
     mailbox: Mailbox
