--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -771,6 +771,7 @@ de:
       when: Wann
       images: Bilder
       attachments: Anh&auml;nge
+      settings: Einstellungen
       i: Ich
       need: brauche
       have: habe
@@ -818,6 +819,7 @@ de:
         amount: Anzahl
         measure: Einheit
         tag_list: Tags
+        settings_visible_for: Sichtbar für
       group:
         title: Titel
         description: Beschreibung
