likes count integrated in items show view

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -260,6 +260,7 @@ de:
   follow: Folgen
   like: Mag ich
   unlike: Mag ich nicht mehr
+  liked_by: Wird gemocht von
   block: Blockieren
   unblock: Blockierung aufheben
   blockedUsers: geblockte User
