--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -257,6 +257,7 @@ en:
   follow: follow
   like: like
   unlike: "don't like anymore"
+  liked_by: Liked by
   block: Block
   unblock: Unblock
   blockedUsers: Blocked Users
