--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -421,6 +421,8 @@ en:
   flash:
     like: ! "You like '%{title}'."
     unlike: ! "You don't like '%{title}' anymore." 
+    follow: ! "You are following '%{title}'."
+    unfollow: ! "You don't follow '%{title}' anymore."
     settings:
       changed: Setting %{setting} changed to %{value}.
     friendships:
