manage_items.feature

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -147,7 +147,7 @@ en:
   resource:
     one: 1 Resource
     other: ! '%{count} Resources'
-    new: New Resource
+    new: New resource
   good:
     one: 1 Good
     other: ! '%{count} Goods'
@@ -476,6 +476,8 @@ en:
         error: Resource could not be created.
       update:
         notice: Successfully updated resource.
+      destroy:
+        notice: Successfully deleted resource.
       follow:
         error:
           alreadyFollowing: You are already following this resource.
