--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -480,6 +480,8 @@ de:
         error: Ressource konnte nicht erstellt werden.
       update:
         notice: Erfolgreich Ressource ge&auml;ndert.
+      destroy:
+        notice: Erfolgreich Ressource gel&ouml;scht.
       follow:
         error:
           alreadyFollowing: Du folgst der Ressource bereits.
