added lat lng field to locations form

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -847,6 +847,8 @@ de:
         zip: PLZ
         state: Bundesland
         country: Land
+        lat: Latitude
+        lng: Longitude
       user:
         aim_list: Ziele
         skill_list: Fähigkeiten
