--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -601,6 +601,7 @@ en:
     given:
       one: 1 resource given
       other: ! '%{count} resources given'
+    notFound: Resource not found oder not visible.
     goods: Goods
     services: Services
     transports: Transports
