featured location based search; itemtypes adjustments

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -221,6 +221,7 @@ de:
   searchIn: Suchen in
   searchedIn: <b>%{item}</b> wurde <b>%{count}</b> mal gesucht
   searchOptions: Suchoptionen
+  searchNothingFound: Sorry, nichts gefunden.
   help: Hilfe
   changepassword: Passwort &auml;ndern
   about: ! '&Uuml;ber uns'
