reviewed user groups and groupmemberships

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -651,6 +651,7 @@ de:
     description: Beschreibung
     holder: Verwaltet von
     memberships: Mitglied von
+    owning: Eigene Gruppen
     pendingMembers: Anfragen und eingeladene Mitglieder
     members: Mitglieder
     abort:
